# GDSC

./: .replit  index.html  index.js  key.json  mypython.py  package-lock.json  package.json  pyproject.toml  style.css
views/: home.ejs  login.ejs  register.ejs  search.ejs
