[tool.poetry]
name = "repl-nix-gdsc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_gdsc"}]

[tool.poetry.dependencies]
python = "^3.10"
youtube-transcript-api = "^0.6.2"
zsvision = "^0.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
